# Obstacle-API

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  api.md  apisource.sh  cliff.toml  players.json  rustfmt.toml  schema.graphql  test_api.http
admin/: Cargo.toml
admin/src/: clear.rs  clear_redis_mappack.rs  leaderboard.rs  main.rs  populate.rs
auth/: Cargo.toml  seq_diagram.mmd
auth/src/: auth_states.rs  browser.rs  game.rs  generated.rs  lib.rs  tests.rs
auth/src/tests/: game_test.rs  invalid_state.rs  state_not_received.rs
clear_redis_mappacks/: Cargo.toml
clear_redis_mappacks/src/: main.rs
crates/admin/: Cargo.toml
crates/admin/src/: clear.rs  clear_redis_mappacks.rs  leaderboard.rs  main.rs  populate.rs
crates/compute-player-map-ranking/: Cargo.toml
crates/compute-player-map-ranking/src/: main.rs
crates/entity/: Cargo.toml
crates/entity/src/: api_status.rs  api_status_history.rs  article.rs  article_authors.rs  banishments.rs  checkpoint_times.rs  current_bans.rs  event.rs  event_admins.rs  event_categories.rs  event_category.rs  event_edition.rs  event_edition_admins.rs  event_edition_categories.rs  event_edition_maps.rs  event_edition_records.rs  event_global_records.rs  functions.rs  global_event_records.rs  global_records.rs  latestnews_image.rs  lib.rs  maps.rs  player_rating.rs  players.rs  players_ips.rs  prelude.rs  rating.rs  rating_kind.rs  records.rs  resources_content.rs  role.rs
crates/entity/src/entities/: api_status.rs  api_status_history.rs  banishments.rs  checkpoint_times.rs  event.rs  event_admins.rs  event_categories.rs  event_category.rs  event_edition.rs  event_edition_admins.rs  event_edition_categories.rs  event_edition_maps.rs  event_edition_records.rs  in_game_event_edition_params.rs  latestnews_image.rs  maps.rs  mod.rs  player_rating.rs  players.rs  players_ips.rs  prelude.rs  rating.rs  rating_kind.rs  records.rs  role.rs
crates/entity/src/types/: api_status_kind.rs  in_game_alignment.rs  mod.rs  modeversion.rs  rating_kind.rs
crates/game_api/: Cargo.toml  build.rs
crates/game_api/src/: auth.rs  configure.rs  either.rs  env.rs  error.rs  graphql.rs  http.rs  lib.rs  main.rs  modeversion.rs  must.rs  tests.rs  utils.rs
crates/game_api/src/auth/: check.rs  gen_token.rs
crates/game_api/src/configure/: slow_req_mw.rs
crates/game_api/src/graphql/: ban.rs  event.rs  map.rs  mappack.rs  player.rs  rating.rs  record.rs  utils.rs
crates/game_api/src/http/: admin.rs  event.rs  map.rs  overview.rs  pb.rs  player.rs  player_finished.rs  staggered.rs
crates/game_api/src/request_filter/: filter.rs  signal.rs
crates/game_api/src/tests/: root.rs
crates/game_api/tests/: base.rs  event_index.rs  map_update.rs  overview.rs  overview_base.rs  overview_event.rs  pb.rs  pb_base.rs  pb_event.rs  player_finished.rs  player_finished_base.rs  player_finished_event.rs  player_times.rs  player_update.rs  root.rs
crates/graphql-api/: Cargo.toml
crates/graphql-api/src/: config.rs  cursors.rs  error.rs  lib.rs  records_connection.rs  schema.rs
crates/graphql-api/src/cursors/: expr_tuple.rs  query_builder.rs  query_trait.rs
crates/graphql-api/src/loaders/: event.rs  event_category.rs  map.rs  mod.rs  player.rs
crates/graphql-api/src/objects/: checkpoint_time.rs  event.rs  event_category.rs  event_edition.rs  event_edition_map.rs  event_edition_map_ext.rs  event_edition_player.rs  event_edition_player_categorized_rank.rs  event_edition_player_rank.rs  map.rs  map_filter.rs  map_with_score.rs  mappack.rs  mappack_map.rs  medal_times.rs  (+16 more)
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250806_191853_first.rs  m20250806_191954_create_views.rs  m20250806_202048_populate.rs  m20250918_132016_add_event_edition_maps_source.rs  m20250918_135135_add_event_edition_maps_thumbnail_source.rs  m20250918_215914_add_event_edition_maps_availability.rs  m20250918_222203_add_event_edition_maps_disability.rs  m20251002_100827_add_rm_mp_style_func.rs  m20251004_214656_add_maps_medal_times.rs  m20260103_142202_players_maps_score.rs  m20260109_101455_refactor_rm_mp_style.rs  m20260109_103647_add_records_is_hidden.rs
crates/records-notifier/: Cargo.toml
crates/records-notifier/src/: lib.rs
crates/records_lib/: Cargo.toml  build.rs
crates/records_lib/src/: context.rs  env.rs  error.rs  event.rs  expirable.rs  leaderboard.rs  lib.rs  map.rs  mappack.rs  models.rs  modeversion.rs  mptypes.rs  must.rs  opt_event.rs  player.rs  pool.rs  ranks.rs  records_notifier.rs  redis_key.rs  sync.rs  time.rs  transaction.rs
crates/request_filter/: Cargo.toml
crates/request_filter/src/: filter.rs  lib.rs  signal.rs
crates/socc/: Cargo.toml
crates/socc/src/: campaign_scores.rs  main.rs  player_ranking.rs
crates/test-env/: Cargo.toml  build.rs
crates/test-env/src/: lib.rs
game_api/: Cargo.toml  build.rs
game_api/public/: give_token.html  new_token.html
game_api/src/: admin.rs  auth.rs  discord_webhook.rs  env.rs  error.rs  finish_lock.rs  graphql.rs  http.rs  lib.rs  main.rs  map.rs  models.rs  must.rs  player.rs  poolsize_mw.rs  redis.rs  tests.rs  utils.rs  xml.rs
game_api/src/graphql/: ban.rs  event.rs  map.rs  mappack.rs  medal.rs  mod.rs  player.rs  rating.rs  record.rs  utils.rs
game_api/src/http/: admin.rs  auth.rs  event.rs  map.rs  mod.rs  overview.rs  pb.rs  player.rs  player_finished.rs  staggered.rs
game_api/src/request_filter/: check.rs  filter.rs  format.rs  mod.rs  parse.rs
game_api/src/utils/: escaped.rs
ladder_score/: Cargo.toml  ladder.py
ladder_score/src/: main.rs
records_lib/: Cargo.toml
records_lib/src/: context.rs  database.rs  env.rs  error.rs  escaped.rs  event.rs  graphql.rs  leaderboard.rs  lib.rs  map.rs  mappack.rs  models.rs  modeversion.rs  mpdefault.rs  mptypes.rs  must.rs  player.rs  ranks.rs  redis_key.rs  table_lock.rs  time.rs  transaction.rs  update_mappacks.rs  update_ranks.rs
records_lib/src/context/: event.rs  macros.rs  map.rs  mappack.rs  persistent.rs  player.rs  pool.rs  transaction.rs
socc/: Cargo.toml
socc/src/: campaign_scores.rs  main.rs
(+98 files in other folders)
