[workspace]
resolver = "2"
members = ["game_api", "records_lib", "socc", "admin"]

[workspace.dependencies]
thiserror = "2.0.3"
tokio = "1.36.0"
async-graphql = "7.0.3"
sqlx = { version = "0.8.0", features = ["chrono", "mysql", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool = { version = "0.12.1", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
serde = "1.0.126"
serde_json = "1.0.133"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix-web = "4.3.0"
actix-cors = "0.7.0"
async-graphql-actix-web = "7.0.3"
tracing-actix-web = "0.7.2"
reqwest = { version = "0.12.3", features = ["json"] }
rand = "0.8.5"
futures = "0.3.27"
sha256 = "1.1.3"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
anyhow = "1.0.75"
dotenvy = "0.15.7"
itertools = "0.13.0"
once_cell = "1.18.0"
csv = "1.3.0"
mkenv = "0.1.6"
records-lib = { version = "0.1", path = "./records_lib" }
nom = "8.0.0"
