[workspace]
resolver = "2"
members = [
  "crates/game_api",
  "crates/records_lib",
  "crates/socc",
  "crates/admin",
  "crates/request_filter",
  "crates/dsc_webhook",
  "crates/migration",
  "crates/entity",
  "crates/graphql-api",
  "crates/graphql-schema-generator",
  "crates/player-map-ranking",
  "crates/compute-player-map-ranking",
  "crates/test-env",
]

[workspace.dependencies]
thiserror = "2.0.12"
tokio = "1.44.1"
async-graphql = "7.0.15"
sqlx = { version = "0.8.3", features = ["chrono", "mysql", "runtime-tokio"] }
chrono = { version = "0.4.40", features = ["serde"] }
deadpool = { version = "0.12.2", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web = "4.10.2"
actix-cors = "0.7.1"
async-graphql-actix-web = "7.0.15"
tracing-actix-web = "0.7.16"
reqwest = { version = "0.12.14", features = ["json"] }
rand = "0.9.0"
futures = "0.3.27"
sha256 = "1.6.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
anyhow = "1.0.97"
dotenvy = "0.15.7"
itertools = "0.14.0"
once_cell = "1.21.1"
csv = "1.3.0"
mkenv = "1.0.0"
nom = "8.0.0"
pin-project-lite = "0.2.16"
sea-orm = { version = "1.1.14", features = [
  "runtime-tokio",
  "macros",
  "with-chrono",
] }
serde_json = "1.0.143"
prettytable = { version = "0.10.0", default-features = false }
