[workspace]
resolver = "2"
members = [
  "crates/game_api",
  "crates/records_lib",
  "crates/socc",
  "crates/admin",
  "crates/request_filter",
  "crates/dsc_webhook",
  "crates/migration",
  "crates/entity",
  "crates/graphql-api",
  "crates/graphql-schema-generator",
  "crates/player-map-ranking",
  "crates/compute-player-map-ranking",
  "crates/test-env",
]

[workspace.dependencies]
thiserror = "2.0.17"
tokio = "1.49.0"
async-graphql = "7.1.0"
sqlx = { version = "0.8.6", features = ["chrono", "mysql", "runtime-tokio"] }
chrono = { version = "0.4.42", features = ["serde"] }
deadpool = { version = "0.12.3", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
actix-web = "4.12.1"
actix-cors = "0.7.1"
async-graphql-actix-web = "7.1.0"
tracing-actix-web = "0.7.20"
reqwest = { version = "0.12.28", features = ["json"] }
rand = "0.9.2"
futures = "0.3.31"
sha256 = "1.6.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
itertools = "0.14.0"
once_cell = "1.21.3"
csv = "1.4.0"
mkenv = "1.0.2"
nom = "8.0.0"
pin-project-lite = "0.2.16"
sea-orm = { version = "1.1.19", features = [
  "runtime-tokio",
  "macros",
  "with-chrono",
] }
serde_json = "1.0.149"
prettytable = { version = "0.10.0", default-features = false }
