[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
deadpool-redis = { version = "0.13.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.12.1"
records-lib = { version = "0.1.0", path = "../records_lib" }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["mysql"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
localhost_test = ["records-lib/localhost_test"]
