[package]
name = "admin"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
deadpool-redis = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
records-lib = { workspace = true, features = ["tracing", "reqwest"] }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["mysql"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mkenv = { workspace = true }
