[package]
name = "admin"
version = "0.1.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
csv = { workspace = true }
deadpool-redis = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
records-lib = { workspace = true, features = ["tracing"] }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mkenv = { workspace = true }
prettytable = { version = "0.10.0", default-features = false }
