[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }
secure-string = { version = "0.3.0", features = ["serde"] }
thiserror = "2.0.9"
simple-mermaid = "0.2.0"
tracing = { version = "0.1.40", optional = true }
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
anyhow.workspace = true
