[package]
name = "clear_redis_mappacks"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-redis = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
records-lib = { workspace = true }
anyhow = { workspace = true }
mkenv = { workspace = true }
dotenvy = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
