[package]
name = "game_api"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
records_lib = { path = "../records_lib" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
async-graphql = { version = "5.0.5", features = ["dataloader", "apollo_tracing"] }
async-graphql-warp = "2.8.5"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "mysql", "macros", "chrono" ] }
chrono = "0.4"
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.11.1", features = ["rt_tokio_1"] }
serde = "1.0.126"
tracing = "0.1"
tracing-subscriber = "0.2.0"
serde-xml-rs = "0.4.1"
actix-web = "4.3.0"
actix-cors = "0.6.4"
async-graphql-actix-web = "5.0.5"
tracing-actix-web = "0.7.2"
reqwest = { version = "0.11.14", features = ["json"] }
rand = "0.8.5"

[features]
output_gql_schema = []
