[package]
name = "game-api"
version = "0.4.7"
edition = "2024"

[lib]
name = "game_api_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-graphql = { workspace = true, features = [
    "dataloader",
    "apollo_tracing",
] }
sqlx = { workspace = true }
chrono = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
actix-web = { workspace = true }
actix-cors = { workspace = true }
async-graphql-actix-web = { workspace = true }
tracing-actix-web = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
sha256 = { workspace = true }
actix-session = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
records-lib = { workspace = true, features = ["tracing"] }
mkenv = { workspace = true }

[dev-dependencies]

[features]
default = []
gql_schema = []
auth = []
