[package]
name = "ladder_score"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
records_lib = { path = "../records_lib" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "mysql", "macros", "chrono" ] }
chrono = "0.4"
deadpool = { version = "0.8.0", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.8.1", features = ["rt_tokio_1"] }
serde = "1.0.126"