[package]
name = "ladder_score"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-api = { path = "../game_api" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "mysql", "macros", "chrono" ] }
chrono = "0.4"
deadpool = { version = "0.10.0", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.13.0", features = ["rt_tokio_1"] }
serde = "1.0.126"
futures = "0.3.28"

[features]
localhost_test = ["game-api/localhost_test"]
