[package]
name = "records-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-graphql = "6.0.7"
chrono = { version = "0.4.33", features = ["serde"] }
deadpool-redis = "0.13.0"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = "0.7.3"
thiserror = "1.0.56"
tracing = { version = "0.1.40", optional = true }

[features]
default = []
localhost_test = []
