[package]
name = "records-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = []
localhost_test = []
