[package]
name = "socc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
deadpool = "0.10.0"
deadpool-redis = "0.13.0"
dotenvy = "0.15.7"
futures = "0.3.30"
records-lib = { version = "0.1.0", path = "../records_lib", features = ["tracing"] }
sqlx = "0.7.3"
tokio = { version = "1.35.1", features = ["time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
localhost_test = ["records-lib/localhost_test"]
