[package]
name = "admin"
version = "1.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
csv = { workspace = true }
deadpool-redis = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
records-lib = { path = "../records_lib", features = ["tracing"] }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mkenv = { workspace = true }
prettytable = { workspace = true }
entity = { path = "../entity" }
sea-orm = { workspace = true }

[features]
default = []
mysql = ["records-lib/mysql"]
postgres = ["records-lib/postgres"]
