[package]
name = "game-api"
version = "1.2.0"
edition = "2024"

[lib]
name = "game_api_lib"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-graphql = { workspace = true, features = [
    "dataloader",
    "apollo_tracing",
] }
sqlx = { workspace = true }
chrono = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
actix-web = { workspace = true }
actix-cors = { workspace = true }
async-graphql-actix-web = { workspace = true }
tracing-actix-web = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
sha256 = { workspace = true }
actix-session = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
records-lib = { path = "../records_lib", features = ["tracing"] }
mkenv = { workspace = true }
nom = { workspace = true }
pin-project-lite = { version = "0.2.16", optional = true }
request_filter = { path = "../request_filter", optional = true }
dsc_webhook = { path = "../dsc_webhook" }
sea-orm = { workspace = true }
migration = { path = "../migration" }
entity = { path = "../entity" }

[dev-dependencies]
actix-http = "3.11.0"
records-lib = { path = "../records_lib", features = ["test"] }
serde_json = { workspace = true }

[features]
default = ["request_filter"]
gql_schema = []
request_filter = ["dep:pin-project-lite", "dep:request_filter"]
auth = []
mysql = ["records-lib/mysql"]
postgres = ["records-lib/postgres"]
