[package]
name = "game-api"
version = "1.3.2"
edition = "2024"

[lib]
name = "game_api_lib"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-graphql = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-http = "3.11.0"
async-graphql-actix-web = { workspace = true }
tracing-actix-web = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
sha256 = { workspace = true }
actix-session = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
records-lib = { path = "../records_lib", features = ["tracing"] }
mkenv = { workspace = true }
nom = { workspace = true }
pin-project-lite = { version = "0.2.16", optional = true }
request_filter = { path = "../request_filter", optional = true }
dsc_webhook = { path = "../dsc_webhook", features = ["actix-web"] }
sea-orm = { workspace = true }
migration = { path = "../migration" }
entity = { path = "../entity" }
graphql-api = { path = "../graphql-api" }

[dev-dependencies]
records-lib = { path = "../records_lib" }
serde_json = { workspace = true }

[features]
default = ["request_filter"]
request_filter = ["dep:pin-project-lite", "dep:request_filter"]
auth = []
mysql = ["records-lib/mysql"]
postgres = ["records-lib/postgres"]
test = ["records-lib/test"]
