[package]
name = "graphql-api"
version = "0.2.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true, features = ["dataloader", "apollo_tracing", "custom-error-conversion"] }
base64 = "0.22"
chrono = { workspace = true }
deadpool-redis = { workspace = true }
entity = { path = "../entity" }
futures = { workspace = true }
records-lib = { path = "../records_lib" }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
