[package]
name = "records-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
futures.workspace = true
parking_lot = "0.12.5"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
