[package]
name = "records-lib"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
mkenv = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
rand = { workspace = true }

[features]
default = []
