[package]
name = "records-lib"
version = "1.3.2"
edition = "2024"

[dependencies]
chrono = { workspace = true }
deadpool-redis = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
mkenv = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
entity = { path = "../entity" }

[features]
default = []
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
sea-orm-proxy = ["sea-orm/proxy"]
test = ["sea-orm/mock"]

[build-dependencies]
rustc_version = "0.4.1"
