[package]
name = "socc"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
records-lib = { workspace = true, features = ["tracing"] }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mkenv = { workspace = true }
