[package]
name = "socc"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
records-lib = { path = "../records_lib", features = ["tracing"] }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mkenv = { workspace = true }
entity = { path = "../entity" }
sea-orm = { workspace = true }

[features]
default = []
mysql = ["records-lib/mysql"]
postgres = ["records-lib/postgres"]
